--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-streamlit==1.26.0
-ultralytics==8.0.183
+
 numpy==1.21.0
 pandas==1.3.0
+streamlit==1.26.0
+torch
+ultralytics==8.0.183
+
+opencv-python-headless==4.8.0.76
+Pillow==9.5.0
+scipy==1.11.1
+filterpy==1.4.5
+matplotlib==3.7.3
